# rknn_ffmpeg_tutorial

./: .augmentignore  .gitignore  IMPLEMENTATION_SUMMARY.md  MJPEG_STREAMING_README.md  test_mjpeg_stream.sh  test_mjpeg_viewer.html  verify_implementation.sh
docs/: hardware_acceleration_fix_zh.md
src/: CMakeLists.txt  config.h  ffmpeg.cpp  ffmpeg.h  main.cpp  mjpeg_streamer.cpp  mjpeg_streamer.h  mpp_encoder.cpp  mpp_encoder.h  multi_stream_main.cpp
src/rockchip/: rga_func.cpp  rga_func.h
